# kuBig2025

./: .gitignore  .infinit.c.swp  CMakeLists.txt  README.md  device_test.c  infinit.c  mydaemon.service  mydeamon.service  platformio.ini
atmega128/: ch10_4_eeprom_temp.c  ch11_1_dc_delay.c  ch3_6_chattering_error.c  ch5_2_ledapp.c  ch6_2_timer0led.c  ch6_4_pwmled.c  ch6_4_timer3leftright.c  ch6_9_timer3Captur.c  ch7_1_pwmled.c  ch8_2_uart2.c
bowling/: CMakeLists.txt  tablecreate.sql
bowling/include/: bowlingsql.h
bowling/src/: board.c  bowling.c  bowlingsql.c  main.c
c_example/: arithmetics  arithmetics.c  celsius2fahr  celsius2fahr.c  compare  compare2  compare2.c  genderRatio  genderRatio.c  limit  limit.c  literal.c  makefile  oddeven.c
c_example/bowling/src/: .env
c_example/part1/: CMakeLists.txt  CmakeLists.txt  charNumber.c  compare.c  fahr2celsius.c  genderRatio.c  infinit.c  limit.c  makefile  triangle.c
c_example/part2/: CMakeLists.txt  absolute  absolute.c  ascii  ascii.c  average2022Temp.c  baseball  baseball.c  bigLetter  bigLetter.c  dice  dice.c  findValueinArray  findValueinArray.c  functionSum.c  grade  grade.c  leafYear.c  makefile  multiplyTable  multiplyTable.c  one2Ten  one2Ten.c  one2TenDoWhile  one2TenDoWhile.c  one2TenSum  one2TenSum.c  one2TenWhile  one2TenWhile.c  passFail  passFail.c  posZeroNeg  posZeroNeg.c  power.c  procScore  procScore.c  randomTwoInt  randomTwoInt.c  returnValue  returnValue.c  (+5 more)
c_example/part3/: CMakeLists.txt  CmakeLists.txt  arrayAssignment.c  arrayPointer.c  bubble.c  dynamicAllocation.c  endian.c  functionPointer  functionPointer.c  makefile  pointer2  pointer2.c  pointerConcept  pointerConcept.c  putSeries.c  qsort.c  selection.c  sumArrayFunction  sumMatrixFunction  sumMtrixFunction2.c  swapFunction.c  unionExample.c
c_example/part3/CarSerial/: makefile  serial.c
c_example/part3/carSerial/: CMakeLists.txt
c_example/part3/date/: CMakeLists.txt  date  date.c  date.h  main.c  makefile
c_example/part3/myRandom/: CMakeLists.txt  a.out  makefile  myRandom.c
c_example/part3/string/: CMakeLists.txt  main.c  makefile  string.c
c_example/sqlQuery/src/: bookSql.c  main.c
cpp/: CMakeLists.txt
cpp/stl/: main.cpp
doc/: atmega.md  atmega128.md  c_programming.md  es_101.md  raspberry_pi.md
ds/: CMakeLists.txt  list.c  strcpy.c  varSizeArray2.c
ds/circularQueue/: main.c  queue.c
ds/list/: list.c  list.h  main.c
ds/list2/: list.c  list.h  main.c
ds/list3/: list.c  list.h  main.c
ds/queue/: queue.c
ds/queue2/: main.c  queue.c  queue.h
ds/queue3/: main.c  queue.c  queue.h
ds/queue4/: queue.c  queue.h
ds/queue5/: main.c  queue.c  queue.h
ds/stack2/: main.c  stack.c
ds/stack3/: main.c  stack.c  stack.h
ds/stack4/: main.c  stack.c  stack.h  varSizeArray2.c
ds/stack5/: main.c  stack.c  stack.h
es101_test/: audio_test.c  device_test.c  oled_fonts.c  servo_test.py  speaker_test.c  ssd1306_demo.c  ssd1306_i2c.h
lib/uart0/: uart0.c
platformio/: platformio.ini
platformio/atmega128/: ch10_4_eeprom_temp.c  ch11_2_dc_pwm.c  ch5_3_FND_interrupt.c  ch6_6_timer1led16bit.c  ch6_7_timer1com.c  ch7_3_buzzerapp.c  ch8_2_uart2.c  ch8_3_uart3.c  ch9_1_adc_timer_Delay.c
platformio/lib/uart0/: uart0.c
platformio/src/: main.c
raspberryPi/: ES-101_SENSOR_PINMAPV1.0.xlsx  a.out  device_gpio.c  driver_exam_native  driver_exam_native.c  hard_tone_buzzer  hard_tone_buzzer.c  helloRaspberry.c  i2c_rgb_led  i2c_rgb_led.c  i2c_rgb_led_switch.c  led_switch_driver_native  makefile  mydaemon.sh  soft_tone_buzzer.c  switch_driver_native  switch_led.c
raspberryPi/Source/driver/driver_exam/: Makefile  driver_exam.c  modules.order
raspberryPi/Source/driver/fnd_misc_driver/: Makefile  fnd_misc_driver.c  modules.order
raspberryPi/Source/driver/led_driver/: Makefile  led_driver.c  modules.order
raspberryPi/Source/driver/led_misc_driver/: Makefile  led_misc_driver.c  modules.order
raspberryPi/Source/driver/led_misc_driver_2/: Makefile  led_misc_driver_2.c  modules.order
raspberryPi/Source/driver/led_static/: led_call  led_call.c  led_static.c  led_static.h  libled_static.so.0
raspberryPi/Source/driver/misc_driver/: Makefile  misc_driver.c  modules.order
raspberryPi/Source/driver/pca9685_driver/: Makefile  modules.order  pca9685_driver.c  pca9685_test.dts
raspberryPi/Source/driver/pdriver_exam/: Makefile  modules.order  pdriver.dts  pdriver_exam.c
raspberryPi/Source/driver/piezo_pdriver/: Makefile  modules.order  piezo.dts  piezo_pdriver.c
raspberryPi/Source/opencv/: cam.py  color.py  face.py  motion.py
raspberryPi/es101_test/: device_test.c  device_test2.c  psd_test.py  servo_test.c  servo_test.py  ssd1306_i2c.c
raspberryPi/gpiod/: hard_tone_buzzer.c  helloRaspberry.c  i2c_rgb_led.c  i2c_rgb_led_switch.c  i2c_servo.c  interrupt.c  led_pwm.c  makefile  soft_tone_buzzer.c  switch_led.c
raspberryPi/module/: .Module.symvers.cmd  .module_exam.ko.cmd  .module_exam.mod.cmd  .module_exam.mod.o.cmd  .module_exam.o.cmd  .modules.order.cmd  modules.order  switch_interrupt.c
raspberryPi/module/driver_exam/: Makefile  driver_exam.c  driver_exam.mod
raspberryPi/module/exam/: Makefile
raspberryPi/module/export_symbol/: Makefile  export_symbol_a.c  export_symbol_b.c  export_symbol_c.c
raspberryPi/module/gpiomem/: gpio_module.c  led_module.c
raspberryPi/module/led/: Makefile  led_module.c  led_module.mod
raspberryPi/module/led_driver/: Makefile  driver_exam.c  led_driver.c  led_driver.mod
raspberryPi/module/led_switch_driver/: Makefile  led_switch_driver.mod
raspberryPi/module/switch_driver/: Makefile  modules.order
raspberryPi/native/: device_gpio.c  fnd_cnt.c  gyro_cnt  gyro_cnt.c  gyro_detector.c  makefile  rgb_switch_fnd.c  sound.c  switch_driver_native.c  temp_humi.c  touch_ATQT1070.c
raspberryPi/shellScript/: cron_config.txt  envTest.c  flow_exec.sh  hello.sh  log.txt
sqlQuerry/: bookSql.c
sqlQuery/: CMakeLists.txt  bookSql.c
sqlQuery/src/: main.c
sqlQurry/: bookSql  bookSql.c  createDbTable.sql  insertdata.sql
src/: main.c  main.cpp
(+127 files in other folders)
